--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <meta content="width=device-width,initial-scale=1" name="viewport">
    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-   <meta content="💳" property="og:title">
+   <meta content="Ampere is on zaza!1!!!1 (Real)" property="og:title">
    <meta content property="og:description">
    <meta content=" " name="theme-color" data-react-helmet="true">
    <meta content="@Ampere102" name="description">
@@ -33,7 +33,7 @@
       </audio>
       <style>@font-face{font-family:Modeseven;src:url(fonts/modes.ttf) format('truetype')}#center h1{font-size:51px;font-family:Modeseven;text-shadow:0 0 .4em #070707}.sparkle{animation:sparkle .5s ease-in-out infinite alternate}@keyframes sparkle{0%{opacity:.5}100%{opacity:1}}</style>
       <div id="center">
-         <h1><span class="sparkle">Pewcio</span></h1>
+         <h1><span class="sparkle">Ampere</span></h1>
       </div>
             <style>@font-face{font-family:Modeseven;src:url(fonts/modes.ttf) format('truetype')}#center h2{font-size:23px;font-family:Modeseven;text-shadow:0 0 .4em #070707}.sparkle{animation:sparkle .5s ease-in-out infinite alternate}@keyframes sparkle{0%{opacity:.5}100%{opacity:1}}</style>
       <div id="center">
