--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="fullscreen overlay">
          <div id="center">
             <label for="overlay-toggle" onclick="audio()">
-               <div id="enter"><b class="begin rainbow">click me</b></div>
+               <div id="enter"><b class="begin rainbow">Click me</b></div>
             </label>
          </div>
       </div>
